--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -21,25 +21,25 @@ jobs:
     - name: dependencies
       run: |
         # Enable the usage of sources over https
-        apt-get update -yqq
-        apt-get install apt-transport-https -yqq
+        sudo apt-get update -yqq
+        sudo apt-get install apt-transport-https -yqq
         # Add keyserver for SBT
         echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
         mkdir -p /root/.gnupg
         gpg --recv-keys --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --keyserver hkp://keyserver.ubuntu.com:80 2EE0EA64E40A89B84B2DF73499E82A75642AC823
         chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
         # Install SBT
-        apt-get update -yqq
-        apt-get install sbt -yqq
+        sudo apt-get update -yqq
+        sudo apt-get install sbt -yqq
         # Log the sbt version
         sbt sbtVersion
         # Install NASM
-        apt-get install nasm -yqq
+        sudo apt-get install nasm -yqq
         # Install LD
-        apt-get install binutils -yqq
-        apt-get install binutils-x86-64-linux-gnu -yqq
+        sudo apt-get install binutils -yqq
+        sudo apt-get install binutils-x86-64-linux-gnu -yqq
         # Install libc
-        apt-get install libc6-dev -yqq
+        sudo apt-get install libc6-dev -yqq
     - name: unit_test
       run: cd microc-compiler && sbt clean test
     - name: blackbox_test
