--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,10 +24,10 @@ jobs:
         sudo apt-get update -yqq
         sudo apt-get install apt-transport-https -yqq
         # Add keyserver for SBT
-        echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
-        mkdir -p /root/.gnupg
-        gpg --recv-keys --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --keyserver hkp://keyserver.ubuntu.com:80 2EE0EA64E40A89B84B2DF73499E82A75642AC823
-        chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
+        sudo echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
+        sudo mkdir -p /root/.gnupg
+        sudo gpg --recv-keys --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --keyserver hkp://keyserver.ubuntu.com:80 2EE0EA64E40A89B84B2DF73499E82A75642AC823
+        sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
         # Install SBT
         sudo apt-get update -yqq
         sudo apt-get install sbt -yqq
